Cleanup and add test case for unknown tag

--- a/framework/src/test/resources/basic-drill-rm-override.conf
+++ b/framework/src/test/resources/basic-drill-rm-override.conf
@@ -22,7 +22,8 @@ drill.exec.rm: {
       memory: 0.5,
       selector: {
         acl: {
-          users: ["mapr"],
+          users: ["bob"],
+          group: ["test"]
         }
       },
       queue: {
